# teiknical

./: Makefile  README.md  app.py  cell-count.db  load_data.py  pyproject.toml
analyses/: 2-initial-analysis.py  3-statistical-analysis.py  4-data-subset-analysis.py
outputs/: 2-initial-analysis-results.parquet  3-boxplot-b-cell.json  3-boxplot-cd4-t-cell.json  3-boxplot-cd8-t-cell.json  3-boxplot-monocyte.json  3-boxplot-nk-cell.json  3-sig-stats.csv  3-stats-adj.csv  3-stats-raw.csv  3-stats.csv  4-baseline-pbmc-miraclib-melanoma.csv  4-samples-per-project.csv  4-subjects-by-resp.csv  4-subjects-by-sex.csv
