[project]
name = "teiknical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-sqlite==1.11.0",
    "numpy==2.5.0",
    "orjson==3.11.9",
    "plotly==6.8.0",
    "polars==1.41.2",
    "statsmodels==0.14.6",
    "streamlit==1.58.0",
]
